--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,29 @@ dist
 .pnp.*
 
 *.pem
+
+# Terraform files
+.terraform/
+terraform.tfstate
+terraform.tfstate.backup
+
+# Ignore any .tfvars files that are intended to be kept secret
+*.tfvars
+
+# Ignore override files as they are usually used to override resources locally and don't need to be checked in
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+
+# Ignore CLI configuration files
+.terraformrc
+terraform.rc
+
+# Ignore crash log files
+crash.log
+
+# Ignore files used to persist plugin data
+terraform-plugin-cache/
+.terraform.lock.hcl
+.terraform.tfstate.lock.info
